<resources>
    <string name="app_name">Exploratory Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_item_settings">Settings</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_favorites</item>
        <item>@string/nav_item_settings</item>
    </string-array>

    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Setting</string>
    <string name="title_home">Home</string>

    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >What\'s Hot</item>
        <item >Favorites</item>
        <item >Settings</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_setting</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>

    <!--Home Fragment-->
    <string name="search_hint">Search...</string>
    <string name="top_result_label">TOP</string>
    <string name="recommend_result_label">RECOMMEND</string>
    <string name="expolatory_search_label">Expolatory Search</string>
    <string name="expolatory_search_details">The exploratory search is a new way to search the web, not to find what you are searching, but to find what you are not searching, and might be intersting for you ! It allows performing queries in an innovative way and helps you to navigate rich results. As a hub, it proposes redirections to others platforms to make you benefit from your discoveries</string>
    <string name="recommendation_label">Get recommendations on your interests</string>
    <string name="recommendation_details">Want a film recommendation related to actors you like? Want a film recommendation focus to genre you like? Interested by more complex and composite recommendations based on your deepest interests : a actor, a director and a film? Or maybe something simpler ? If you have a thirst for discovery and knowledge, System has answers for you</string>
    <string name="understand_recommend_label">Understand a recommendation</string>
    <string name="understand_details">System gives you recommendations, but also tools to understand why you have these recommendations, because we know that the more important in a recommendation is to know why you get it !</string>

</resources>
