<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_label"
            android:textColor="@color/titleText"
            android:background="@color/backgroundTextLabel"
            android:text="@string/expolatory_search_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"
            android:layout_margin="@dimen/text_detail_margin"
            android:text="@string/expolatory_search_details"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_label"
            android:textColor="@color/titleText"
            android:background="@color/backgroundTextLabel"
            android:text="@string/recommend_result_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"
            android:layout_margin="@dimen/text_detail_margin"
            android:text="@string/recommendation_details"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_label"
            android:textColor="@color/titleText"
            android:background="@color/backgroundTextLabel"
            android:text="@string/understand_recommend_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"
            android:layout_margin="@dimen/text_detail_margin"
            android:text="@string/understand_details"/>

    </LinearLayout>
</LinearLayout>